== Changelog

=== Next release

Fixed:

* in standalone mode, :omit-source? true  is not work. 


=== [0.1.4] - 2020-02-25

Fixed:

* not all changes are pushed to remote origin

Changed:

* now used `git add .` instead of `git add pbuild.edn`

=== [0.1.3] - 2020-02-24

Added:

* badigeon sources in project
* tools.deps version 0.8.677

Fixed:

* call main without parameters
* pbuilder doesn't work without badigeon dependency & tools.deps

=== [0.1.2] - 2020-02-24

Changed:

* bump function: bump from minor to patch by default.

=== [0.1.1] - 2020-02-24

Added:

* bump version functionality

=== [0.1.0] - 2020-02-24

* initial release