@@ -20,4 +20,6 @@
  :scm                         {:url "https://github.com/redstarssystems/pbuilder.git"}
  :license                     {:name "EPL-2.0"
                                :url  "https://www.eclipse.org/legal/epl-2.0/"}
+ :excluded-libs               #{}                           ;; e.g #{ org.clojure/clojure my.org/lib01}
+ ;;:standalone-run-script       "./my-custom-script.sh"
  }
